--- a/app/item/friends.html
+++ b/app/item/friends.html
@@ -1,19 +1,27 @@
 <ActionBar title="Friends">
     <ActionItem tap="onShare" ios.systemIcon="9" ios.position="left" android.systemIcon="res://ic_menu_share" android.position="actionBar"></ActionItem>
-    <ActionItem (tap)="onSearch($event)" ios.systemIcon="12" ios.position="right" text="search" android.position="popup"></ActionItem>
+    <ActionItem tap="onSearch($event)" ios.systemIcon="12" ios.position="right" text="search" android.position="popup"></ActionItem>
 </ActionBar>
 
-<GridLayout columns="*,*,*,*,*,*,*,*,*,*" rows="*,*,*,*,*,*,*,*,*,*" (loaded)="gridInitialized($event)">
-    <SearchBar row=0 column=4 colspan=6 hint="Search for Users ..." (loaded)="searchStart($event)" (textChange)="onTextChanged($event)"
-            [text]="searchPhrase" (clear)="onClear($event)" (submit)="onSubmit($event)">
-    </SearchBar>
-    <RadListView id="Main" column=0 colspan="10" row=0 rowspan=10 [items]="usersCurrentlyChosen" orientation="horizontal" height=50 
-            multipleSelection="true" selectionBehavior="Press" (loaded)="listInitialized($event)"
+<GridLayout columns="10,*,10" rows="*,*,*,*,*,*,*,*,*,*" (loaded)="gridInitialized($event)">
+    <RadListView id="Main" column="1" row="1" rowspan="10" [items]="searchUsers" orientation="Vertical" height=100%
+            multipleSelection="false" selectionBehavior="Press"
             (itemSelected)="categorySelected($event)" (itemDeselected)="categoryDeselected($event)">
-                <ListViewGridLayout tkListViewLayout scrollDirection="Horizontal" itemWidth="80" itemHeight="60" spanCount="1"></ListViewGridLayout>
+                <ListViewGridLayout tkListViewLayout scrollDirection="Vertical" itemWidth="350" itemHeight="80" spanCount="1"></ListViewGridLayout>
                     <!-- When nesting ListView in ScrollView, make sure that the nested scrollable component has an explicitly set height -->
-                <ng-template let-item="item">
-                        <label textAlignment = "center" paddingTop="20" text= {{item}}></label>
+                <ng-template let-item="item" let-index="index" horizontalAlignment="center">
+                    <GridLayout id="userList" columns="*,*,*,*,*,*" rows="*,*" [nsRouterLink]="['user']" [queryParams]="{ source: 'friends', id: searchUsers[index]['_id']}" style="background-color: lightgray;">
+                        <StackLayout orientation="horizontal" row="0" column="0" colspan="3" >
+                           <label class="userListText" textAlignment = "left" [text]="'@' + item.username"></label>
+                        </StackLayout>
+                        <StackLayout row="1" column="0" colspan="3" orientation="horizontal">
+                            <label class="userListText"  [text]="item.first_name + ' ' + item.last_name" textAlignment = "left"></label>
+                        </StackLayout>
+                        <Button text="Friend" row="0" rowspan="2" column="4" colspan="2" style="background-color: white; color: black;"></Button>
+                    </GridLayout>
                 </ng-template>
     </RadListView>
+    <SearchBar row=0 column=0 colspan=3 hint="Search for Users ..." (loaded)="searchStart($event)" (textChange)="onTextChanged($event)"
+    [text]="searchPhrase" (clear)="onClear($event)" submit="onSubmit($event)">
+    </SearchBar>
 </GridLayout>
