--- a/app/item/friends.html
+++ b/app/item/friends.html
@@ -3,14 +3,14 @@
     <ActionItem tap="onSearch($event)" ios.systemIcon="12" ios.position="right" text="search" android.position="popup"></ActionItem>
 </ActionBar>
 
-<GridLayout columns="10,*,10" rows="*,*,*,*,*,*,*,*,*,*" (loaded)="gridInitialized($event)">
+<GridLayout class="friendsListGrid" columns="10,*,10" rows="*,*,*,*,*,*,*,*,*,*" (loaded)="gridInitialized($event)">
     <RadListView id="Main" column="1" row="1" rowspan="10" [items]="searchUsers" orientation="Vertical" height=100%
-            multipleSelection="false" selectionBehavior="Press"
+            multipleSelection="false" selectionBehavior="Press" (scrolled)="friendsScrollStartedEvent($event)"
             (itemSelected)="categorySelected($event)" (itemDeselected)="categoryDeselected($event)">
-                <ListViewGridLayout tkListViewLayout scrollDirection="Vertical" itemWidth="350" itemHeight="80" spanCount="1"></ListViewGridLayout>
+                <ListViewGridLayout tkListViewLayout scrollDirection="Vertical" itemWidth="350" itemHeight="95" spanCount="1"></ListViewGridLayout>
                     <!-- When nesting ListView in ScrollView, make sure that the nested scrollable component has an explicitly set height -->
                 <ng-template let-item="item" let-index="index" horizontalAlignment="center">
-                    <GridLayout id="userList" columns="*,*,*,*,*,*" rows="*,*" [nsRouterLink]="'user'" [queryParams]="{ source: 'friends', id: searchUsers[index]['_id']}" style="background-color: lightgray;">
+                    <GridLayout id="userList" columns="*,*,*,*,*,*" rows="*,*" [nsRouterLink]="['../friends/user']" [queryParams]="{ source: 'friends', id: searchUsers[index]['_id']}" style="margin-top: 10;">
                         <StackLayout orientation="horizontal" row="0" column="0" colspan="3" >
                            <label class="userListText" textAlignment = "left" [text]="'@' + item.username"></label>
                         </StackLayout>
@@ -21,7 +21,7 @@
                     </GridLayout>
                 </ng-template>
     </RadListView>
-    <SearchBar row=0 column=0 colspan=3 hint="Search for Users ..." (loaded)="searchStart($event)" (textChange)="onTextChanged($event)"
+    <SearchBar id="searchBar" row=0 column=0 colspan=3 hint="Search for Users ..." loaded="searchStart($event)" (textChange)="onTextChanged($event)"
     [text]="searchPhrase" (clear)="onClear($event)" submit="onSubmit($event)">
     </SearchBar>
 </GridLayout>
