--- a/app/item/user.html
+++ b/app/item/user.html
@@ -1,29 +1,40 @@
 <router-outlet></router-outlet>
-<BottomNavigation selectedIndex="0">
-    <!-- The bottom tab UI is created via TabStrip (the containier) and TabStripItem (for each tab)-->
-    <TabStrip>
-        <TabStripItem>
-            <Label text="Likes"></Label>
-            <Image src="font://&#xf004;" class="fas t-36"></Image>
-        </TabStripItem>
-        <TabStripItem class="special">
-            <Label text="Outfits"></Label>
-            <Image src="font://&#xf553;" class="fas t-36"></Image>
-        </TabStripItem>
-    </TabStrip>
-
-    <!--Likes Feed-->
-    <TabContentItem>
-        <GridLayout rows="*,*,*,*,*" (loaded)="start($event)">
-            <StackLayout row="0" rowspan="2">
-                <Lable [text]='username'></Lable>
-                <Lable [text]='fullname'></Lable>
-            </StackLayout>
+<Gridlayout padding="2 0 2 2" rows = "*,*,*" id="accountMenu" margin="0"> 
+    <StackLayout row="0">
+        <Image [src] = "userIcon" height="70%" width = "70%"></Image>
+        <Label [text]="username + ' ' + fullname" textAlignment="center"></Label>
+        <GridLayout columns="*,*,*,*,*">
+            <button col="0" colspan="2" width="100%" text="See Top Outfits" (tap)="browseTopOutfits()"></button>
+            <button col="3" colspan="2" width="100%" text="Friends" (tap)="openFriend()" ></button>
         </GridLayout>
-    </TabContentItem>
+    </StackLayout>    
+    <ScrollView row="1" rowspan="2" orientation="vertical">
+        <StackLayout>
+                <Button class="profile" textAlignment = "center" text="Their Liked" (tap)="openLikes()"></Button>
+                <RadListView height ="200" row="0" orientation="horizontal" [items]="userLikes" margin-left = "2" margin-right="2">
+                    <ListViewLinearLayout tkListViewLayout scrollDirection="Horizontal"></ListViewLinearLayout>
+                    <ng-template let-item="item" let-index="index">
+                        <StackLayout [nsRouterLink]="['detail', index]" 
+                        [queryParams]="{ source: 'userLikes', liked: true, disliked: false }">
+                            <Image [src]="item.img[0]" height="80%" width = "80%" ios:stretch="aspectFill"></Image>
+                            <Label textAlignment = "center" size = "15" width="100%" [text]="item.name" textWrap="true"></Label>
+                        </StackLayout>
+                    </ng-template>
+                </RadListView>
+                <Button text = "Their Outfits"></Button>
+                <RadListView height ="200" row="0" orientation="horizontal" [items]="myOutfits" margin-left = "2" margin-right="2">
+                    <ListViewLinearLayout tkListViewLayout scrollDirection="Horizontal" itemWidth="200" itemHeight="200" ></ListViewLinearLayout>
+                    <ng-template let-item="item" let-index="index">
+                        <GridLayout rows="*,*" columns="*,*" [nsRouterLink]="['outfit']" [queryParams]="{ outfit: index}">
+                            <Image row=0 column=0 [src]="item['items'][0] ? item['items'][0].img[0] : ''" height="70%" width = "70%" ios:stretch="aspectFill"></Image>
+                            <Image row=0 column=1 [src]="item['items'][1] ? item['items'][1].img[0] : ''" height="70%" width = "70%" ios:stretch="aspectFill"></Image>
+                            <Image row=1 column=0 [src]="item['items'][2] ? item['items'][2].img[0] : ''" height="70%" width = "70%" ios:stretch="aspectFill"></Image>
+                            <Image row=1 column=1 [src]="item['items'][3] ? item['items'][3].img[0] : ''" height="70%" width = "70%" ios:stretch="aspectFill"></Image>
+                        </GridLayout>
+                    </ng-template>
+                </RadListView>
+        </StackLayout>
+    </ScrollView>
 
-    <!-- Outfits-->
-    <TabContentItem>
-          
-    </TabContentItem>
-</BottomNavigation>
+
+</Gridlayout>
