recusive user list dive added

--- a/app/item/user.html
+++ b/app/item/user.html
@@ -1,4 +1,3 @@
-<router-outlet></router-outlet>
 <Gridlayout padding="2 0 2 2" rows = "*,*,*" id="accountMenu" margin="0"> 
     <StackLayout row="0">
         <Image [src] = "userIcon" height="60%" width = "60%"></Image>
@@ -69,7 +68,7 @@
                     <ListViewGridLayout tkListViewLayout scrollDirection="Vertical" itemWidth="350" itemHeight="95" spanCount="1"></ListViewGridLayout>
                         <!-- When nesting ListView in ScrollView, make sure that the nested scrollable component has an explicitly set height -->
                     <ng-template let-item="item" let-index="index" horizontalAlignment="center">
-                        <GridLayout id="userList" columns="*,*,*,*,*,*" rows="*,*" [nsRouterLink]="['user']" [queryParams]="{ source: 'friends', id: profileFriendsSearchUsers[index]['_id']}" style="margin-top: 10; margin-left: 15;">
+                        <GridLayout id="userList" columns="*,*,*,*,*,*" rows="*,*" (tap)="goToFriendsProfile(friends, profileFriendsSearchUsers[index]['_id'])" style="margin-top: 10; margin-left: 15;">
                             <StackLayout orientation="horizontal" row="0" column="0" colspan="3" >
                             <label class="userListText" textAlignment = "left" [text]="'@' + item.username"></label>
                             </StackLayout>
