--- a/app/item/settings.html
+++ b/app/item/settings.html
@@ -1,10 +1,22 @@
 <ActionBar title="App Settings" loaded="findUserActions()" style="background-color: black;">
 </ActionBar>
-
-<StackLayout>
-    <Label text="Profile Settings"></Label>
-    <Label text="Permission Settings"></Label>
-    <Label text="Search Settings"></Label>
-    <Label text="Profile Settings"></Label>
-
-</StackLayout>
+<ScrollView>
+    <StackLayout width="100%" height="100%" >
+        <GridLayout columns="*,30" height="40" class="settingsOption">
+            <Label column="0" text="Profile Settings"></Label>
+            <Label column="1" text="&#xf105;" class="fas"></Label>
+        </GridLayout>
+        <GridLayout columns="*,30" height="40" class="settingsOption">
+            <Label column="0" text="Permission Settings"></Label>
+            <Label column="1" text="&#xf105;" class="fas"></Label>
+        </GridLayout>
+        <GridLayout columns="*,30" height="40" class="settingsOption">
+            <Label column="0" text="Search Settings"></Label>
+            <Label column="1" text="&#xf105;" class="fas"></Label>
+        </GridLayout>
+        <GridLayout columns="*,30" height="40" class="settingsOption">
+            <Label column="0" text="Privacy Settings"></Label>
+            <Label column="1" text="&#xf105;" class="fas"></Label>
+        </GridLayout>
+    </StackLayout>
+</ScrollView>
